# genai-chatbot

./: .gitignore  Dockerfile  Dockerfile.prod  Jenkinsfile  README.md  debug_metrics.py  deploy-simple.ps1  deploy.ps1  docker-compose.yml  docker-run.ps1  docker-run.sh  generate_test_data.py  import_dashboard.py  init_knowledge_base.py  pyproject.toml  requirements.txt  run.py  setup-automatic-builds.ps1  setup-jenkins-webhook.ps1  setup-jenkins.ps1  simple_test.py  test_api.py  test_metrics.py  test_metrics_local.py  update-dependencies.py
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py  main.py
data/: sample_knowledge.txt  test_document.txt
k8s/: README.md  configmap.yaml  deploy-monitoring.ps1  deploy.ps1  deploy.sh  deployment.yaml  fix-deployment.ps1  grafana-configmap.yaml  grafana-dashboard-configmap.yaml  grafana-dashboard-simple.json  grafana-dashboard.json  grafana-dashboards-provider-configmap.yaml  grafana-datasources-configmap.yaml  grafana-deployment.yaml  grafana-ingress.yaml  grafana-pvc.yaml  grafana-service.yaml  horizontal-pod-autoscaler.yaml  ingress.yaml  jenkins-configmap.yaml  jenkins-deployment.yaml  jenkins-ingress.yaml  jenkins-namespace.yaml  jenkins-pvc.yaml  jenkins-service.yaml  jenkins-serviceaccount.yaml  jenkins-tools-configmap.yaml  jenkins-webhook-configmap.yaml  namespace.yaml  persistent-volume-claims.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-pvc.yaml  prometheus-service.yaml  prometheus-serviceaccount.yaml  secret.yaml  service.yaml
tests/: conftest.py  test_basic.py
(+11 files in other folders)
